WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147177
Web Inspector: Node highlights are wrong when the page is zoomed
https://bugs.webkit.org/show_bug.cgi?id=147177
Summary
Web Inspector: Node highlights are wrong when the page is zoomed
Joseph Pecoraro
Reported
2015-07-21 17:55:18 PDT
* SUMMARY Node highlights are wrong when the page is zoomed. * STEPS TO REPRODUCE 1. Inspect <
http://daringfireball.net
> 2. Double tap to zoom in to post content 3. Inspect the title of a post => node highlight is very large and misplaced
Attachments
[PATCH] Proposed Fix
(1.57 KB, patch)
2015-07-21 17:56 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2015-07-21 17:55:27 PDT
<
rdar://problem/13583256
>
Joseph Pecoraro
Comment 2
2015-07-21 17:56:36 PDT
Created
attachment 257226
[details]
[PATCH] Proposed Fix
Simon Fraser (smfr)
Comment 3
2015-07-21 17:59:01 PDT
Comment on
attachment 257226
[details]
[PATCH] Proposed Fix Whoo nice!
WebKit Commit Bot
Comment 4
2015-07-21 18:47:18 PDT
Comment on
attachment 257226
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 257226 Committed
r187145
: <
http://trac.webkit.org/changeset/187145
>
WebKit Commit Bot
Comment 5
2015-07-21 18:47:21 PDT
All reviewed patches have been landed. Closing bug.
Tim Horton
Comment 6
2015-08-28 02:00:44 PDT
***
Bug 145368
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug