Web Inspector: Node highlights are wrong when the page is zoomed https://bugs.webkit.org/show_bug.cgi?id=147177

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-07-21
Reviewed by Simon Fraser.

* inspector/InspectorOverlay.cpp:
(WebCore::InspectorOverlay::update):
Remove scaling that appears to no longer be needed, it was double
scaling the overlay content and misplacing it in the process.

Canonical link: https://commits.webkit.org/165221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187145 268f45cc-cd09-0410-ab3c-d52691b4dbfc